#
# Copyright (C) 2023 Shenzhen Kaihong DID Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//device/soc/unisoc/p7885/soc_common.gni")
BOARD = soc_name

openmax_include_dirs = [
    ".",
    #openmax
    "//third_party/openmax/api/1.1.2",
    #libomx_utils
    "//device/soc/unisoc/p7885/hardware/omx_il/libutils/include/utils",
    "//device/soc/unisoc/p7885/hardware/omx_il/libutils/include",
    #libstagefrighthw
    "//device/soc/unisoc/p7885/hardware/omx_il/libstagefrighthw/include",

    #libmemion
    "//device/soc/unisoc/p7885/hardware/omx_il/libutils/memory/libmemion/include",

    #标准库和log库
    "//commonlibrary/c_utils/base/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include/hilog",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",

]

