# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//device/soc/unisoc/p7885/soc_common.gni")
ohos_shared_library("vendorGnssAdapter") {
  output_name = "vendorGnssAdapter"
  cflags = [ 
    "-w", 
    "-g", 
    "-O", 
    "-fPIC",
  ] 

  defines += [ 
  "__USER__"
  ]

  include_dirs = [
  "//drivers/peripheral/location/gnss/hdi_service",
  "//base/location/location/interfaces/inner_api/include",
  "//utils/native/base/include",
  "//drivers/hdf_core/framework/include/utils",
  "//drivers/hdf_core/adapter/uhdf2/osal/include"
  ]

  sources = [
    "vendorGnssAdapter.cpp",
  ]
  deps = [
  ]

  external_deps = [
    "hilog:libhilog",
  ]
  install_images = [ chipset_base_dir ]
  module_install_dir = "lib64"
  subsystem_name = "${SUBSYSTEM_NAME}"
  part_name = "${PART_NAME}"
  install_enable = true
  output_prefix_override = true
  output_extension = "so"
}


