# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//device/soc/unisoc/p7885/soc_common.gni")
NPU_LIB_PATH="//device/soc/unisoc/p7885/hardware/npu"

ohos_shared_library("libnpu_vdi_impl") {
  sources = [
    "nnrt_device_vdi_impl.cpp",
    "prepared_model_impl_2_0.cpp",
  ]

  include_dirs = [
    "include",
    "${NPU_LIB_PATH}/include"
  ]

  external_deps = [
    "ipc:ipc_single",
    "drivers_interface_nnrt:nnrt_idl_headers",
    "drivers_interface_nnrt:libnnrt_stub_2.0",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdi",
    "c_utils:utils",
    "hilog:libhilog",
  ]

  lib_dirs = [
    "${NPU_LIB_PATH}/core",
  ]
  libs = [ "uniai" ]

  output_name = "nnrt_vdi_impl"
  output_extension = "z.so"
  install_images = [ chipset_base_dir ]
  subsystem_name = "soc_p7885"
  part_name = "soc_p7885"
  install_enable = true
}

group("nnrt") {
  deps = [
    ":libnpu_vdi_impl",
  ]
}
