#
# Copyright 2016-2026 Unisoc (Shanghai) Technologies Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/ohos.gni")
import("//device/soc/unisoc/p7885/hardware/omx_il/sprd_omx.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")


group("libstagefright_components") {
    deps = [
        "//device/soc/unisoc/p7885/hardware/omx_il/components/video/avc/dec/hw:libstagefright_sprd_avc_dec",
        "//device/soc/unisoc/p7885/hardware/omx_il/components/video/avc/enc/hw:libstagefright_sprd_avc_enc",
        "//device/soc/unisoc/p7885/hardware/omx_il/components/video/hevc/dec:libstagefright_sprd_hevc_dec",
        "//device/soc/unisoc/p7885/hardware/omx_il/components/video/hevc/enc:libstagefright_sprd_hevc_enc",
    ]
}
