#
# Copyright 2016-2026 Unisoc (Shanghai) Technologies Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
import("//build/ohos.gni")
import("//device/soc/unisoc/p7885/hardware/omx_il/sprd_omx.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//device/soc/unisoc/p7885/soc_common.gni")

ohos_shared_library("libstagefrighthw") {
  sources = [
      "SprdOMXComponent.cpp",
      "SprdSimpleOMXComponent.cpp",
      "SprdVideoDecoderBase.cpp",
      "SprdVideoDecoderOMXComponent.cpp",
      "SprdVideoEncoderBase.cpp",
      "SprdVideoEncoderOMXComponent.cpp",
  ]

  include_dirs = openmax_include_dirs

  include_dirs += [
      "./include",
  ]

  deps = [
      "//device/soc/unisoc/p7885/hardware/omx_il/libutils:libomx_utils",
      "//device/soc/unisoc/p7885/hardware/omx_il/libutils/memory/libmemion:libomx_memion",
  ]
  external_deps = [ 
    "hilog:libhilog",
    "c_utils:utils",
  ]

  cflags_cc = [
    "-Wno-reorder-ctor",
    "-Wno-unused-function",
    "-Wno-thread-safety-analysis",
    "-Wno-header-hygiene",
    "-Wno-inconsistent-missing-override",
    "-Wno-switch",
    ]

  cflags = [
    "-DOHOS_BUFFER_HANDLE",
  ]

  install_enable = true
  innerapi_tags = [ "passthrough_indirect" ]
  install_images = [ chipset_base_dir ]
  subsystem_name = "${SUBSYSTEM_NAME}"
  part_name = "${PART_NAME}"

}
